--- a/main.css
+++ b/main.css
@@ -19,14 +19,19 @@ body {
 }
 .container {
   width: 90%;
-  height: 100vh;
-  margin: 0 auto;
-  padding: 30px 0;
+  min-height: calc(100vh - 60px);
+  margin: 30px auto;
   display: grid;
   grid-template-columns: 75% 20%;
-  gap: 5%;
+  column-gap: 5%;
+}
+@media (max-width: 991px) {
+  .container {
+    grid-template-columns: 100%;
+  }
 }
 .col {
+  width: 100%;
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -39,22 +44,36 @@ body {
   display: flex;
   justify-content: space-between;
 }
+@media (max-width: 991px) {
+  .row {
+    flex-direction: column;
+  }
+}
 .box {
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
-  padding: 0 20px;
+  padding: 20px;
   border-radius: 12px;
 }
+@media (max-width: 991px) {
+  .box {
+    width: 100% !important;
+    margin-bottom: 15px;
+  }
+}
 .box .title {
-  width: 180px;
+  width: 100%;
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
 }
 .box .title img {
   border-radius: 50%;
   border: 2px solid var(--white);
+  margin-bottom: 10px;
 }
 .row:first-child .box:first-child {
   width: 60%;
