--- a/main.css
+++ b/main.css
@@ -1,11 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@500;600&display=swap");
 :root {
-  --moderate-violet: hsl(263, 55%, 52%);
-  --very-dark-grayish-blue: hsl(217, 19%, 35%);
-  --very-dark-blackish-blue: hsl(219, 29%, 14%);
-  --white: hsl(0, 0%, 100%);
+  --violet: hsl(263, 55%, 52%);
+  --dark-gray: hsl(217, 19%, 35%);
+  --dark-black: hsl(219, 29%, 14%);
+  --white: #fff;
   --light-gray: hsl(0, 0%, 81%);
-  --light-grayish-blue: hsl(210, 46%, 95%);
+  --light-blue: hsl(210, 46%, 95%);
 }
 * {
   box-sizing: border-box;
@@ -14,125 +14,148 @@
 }
 body {
   font-family: "Barlow Semi Condensed", sans-serif;
-  background-color: #eee;
-  font-size: 14px;
+  background-color: var(--light-blue);
+  font-size: 13px;
+}
+@media (max-width: 1200px) {
+  body {
+    font-size: 11px;
+  }
 }
 .container {
-  width: 90%;
-  min-height: calc(100vh - 60px);
-  margin: 30px auto;
+  width: 100%;
+  min-height: 100vh;
+  padding: 60px;
   display: grid;
-  grid-template-columns: 75% 20%;
+  grid-template-columns: 70% 20%;
   column-gap: 5%;
+  grid-template-rows: 100%;
 }
 @media (max-width: 991px) {
   .container {
     grid-template-columns: 100%;
+    padding: 25px;
   }
 }
-.col {
+.container .col {
   width: 100%;
   height: 100%;
+}
+.container .col:first-child {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  flex-wrap: wrap;
-}
-.row {
-  width: 100%;
-  height: 48%;
-  display: flex;
-  justify-content: space-between;
 }
 @media (max-width: 991px) {
-  .row {
-    flex-direction: column;
+  .container .col:first-child {
+    justify-content: space-around;
   }
 }
-.box {
-  width: 100%;
+.container .col .row {
   display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  padding: 20px;
-  border-radius: 12px;
-}
-@media (max-width: 991px) {
-  .box {
-    width: 100% !important;
-    margin-bottom: 15px;
-  }
-}
-.box .title {
-  width: 100%;
-  display: flex;
-  flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
 }
-.box .title img {
+@media (max-width: 767px) {
+  .container .col .row {
+    flex-direction: column;
+  }
+}
+.container .col .box {
+  padding: 20px;
+  border-radius: 12px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.container .col .box .title {
+  display: flex;
+  align-items: center;
+  margin-bottom: 15px;
+}
+.container .col .box .title img {
   border-radius: 50%;
-  border: 2px solid var(--white);
-  margin-bottom: 10px;
+  border: 1px solid var(--white);
+  margin-right: 20px;
 }
-.row:first-child .box:first-child {
-  width: 60%;
-  background-color: var(--moderate-violet);
-}
-.row:first-child .box:first-child .name,
-.row:first-child .box:last-child .name,
-.row:last-child .box:last-child .name {
+.container .col .box .title .name {
   color: var(--white);
-  margin-bottom: 5px;
+  font-weight: bold;
+  font-size: 14px;
+  margin-bottom: 2px;
 }
-.row:first-child .box:first-child .job,
-.row:first-child .box:last-child .job,
-.row:last-child .box:last-child .job {
+.container .col .box .title .job {
+  font-weight: bold;
+  color: var(--light-gray);
+  font-size: 13px;
+}
+.container .col .box .headding {
+  color: var(--white);
+  font-size: 14px;
+  font-weight: bold;
+  margin-bottom: 15px;
+}
+.container .col .box .desc {
   color: var(--light-gray);
 }
-.row:first-child .box:first-child .heading,
-.row:first-child .box:last-child .heading,
-.row:last-child .box:last-child .heading {
-  color: var(--white);
-  font-size: 20px;
+.container .col .row {
+  height: 48%;
 }
-.row:first-child .box:first-child .desc,
-.row:first-child .box:last-child .desc,
-.row:last-child .box:last-child .desc {
-  color: var(--light-gray);
-  line-height: 1.6;
+.container .col .row .box {
+  height: 100%;
 }
-.row:first-child .box:last-child {
+.container .col .row:first-child .box:first-child {
+  background-color: var(--violet);
+  width: 65%;
+}
+@media (max-width: 767px) {
+  .container .col .row:first-child .box:first-child {
+    width: 100%;
+  }
+}
+.container .col .row:first-child .box:last-child {
   width: 30%;
-  background-color: var(--very-dark-grayish-blue);
+  background-color: var(--dark-gray);
 }
-.row:last-child .box:first-child {
+@media (max-width: 767px) {
+  .container .col .row:first-child .box:last-child {
+    width: 100%;
+    margin-top: 15px;
+  }
+}
+.container .col .row:last-child .box:first-child {
   width: 30%;
   background-color: var(--white);
 }
-.row:last-child .box:first-child .name,
-.col:last-child .box .name {
-  color: var(--very-dark-blackish-blue);
+@media (max-width: 767px) {
+  .container .col .row:last-child .box:first-child {
+    width: 100%;
+  }
 }
-.row:last-child .box:first-child .job,
-.col:last-child .box .job {
-  color: var(--light-gray);
+.container .col .row:last-child .box:first-child .name,
+.container .col .row:last-child .box:first-child .headding {
+  color: var(--dark-black);
 }
-.row:last-child .box:first-child .heading,
-.col:last-child .box .heading {
-  color: var(--very-dark-blackish-blue);
-  font-size: 20px;
+.container .col .row:last-child .box:last-child {
+  width: 65%;
+  background-color: var(--dark-black);
 }
-.row:last-child .box:first-child .desc,
-.col:last-child .box .desc {
-  color: var(--light-gray);
-  line-height: 1.4;
+@media (max-width: 767px) {
+  .container .col .row:last-child .box:last-child {
+    width: 100%;
+    margin-top: 15px;
+  }
 }
-.row:last-child .box:last-child {
-  width: 60%;
-  background-color: var(--very-dark-blackish-blue);
+@media (min-width: 768px) and (max-width: 991px) {
+  .container .col:last-child {
+    margin-top: 15px;
+  }
 }
-.col:last-child .box {
+.container .col:last-child .box {
   height: 100%;
   background-color: var(--white);
+}
+.container .col:last-child .box .name,
+.container .col:last-child .box .headding {
+  color: var(--dark-black);
 }
